--- a/news-manager/src/main/resources/db.properties
+++ b/news-manager/src/main/resources/db.properties
@@ -1,5 +1,5 @@
 db.driver = com.mysql.cj.jdbc.Driver
 db.url = jdbc:mysql://127.0.0.1/news-manager?useSSL=false&serverTimezone=UTC
 db.user = root
-db.password = _2868062
+db.password = 123456
 db.poolsize = 5
